--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
     <link rel="stylesheet" type="text/css" href="lpeng.css">
   </head>
   <body>
-    <table>
-      <tr>
-        <td> <img id="id-photo" src="images/lipeng-seattle.jpg"></td>
-        <td>
-          <div>
-            <h1>Peng Li</h1>
-            Ph.D candidate,  <a href="http://nlp.csai.tsinghua.edu.cn" target=_blank><b>N</b>atural <b>L</b>anguage <b>P</b>rocessing Group</a>,<br/>
-            <a href="http://www.csai.tsinghua.edu.cn" target=_blank>State Key Laboratory of Intelligent Technology and Systems</a>,<br/> 
-            <a href="http://www.tnlist.org.cn" target=_blank>Tsinghua National Laboratory for Information Science and Technology</a>,<br/>
-            <a href="http://www.cs.tsinghua.edu.cn" target=_blank>Department of Computer Science and Technology</a>,<br/>
-            <a href="http://www.tsinghua.edu.cn" target=_blank>Tsinghua University</a>, Beijing, China.<br/>
-            Contact: pengli09 at gmail.com, lpeng2009 at 163.com<br/>
-          </div>
-        </td>
-      </tr>
-    </table>
+    <div id="photo">
+      <img id="id-photo" src="images/lipeng-seattle.jpg" alt="Peng Li's photo">
+    </div>
+    <div id="info">
+      <h1>Peng Li</h1>
+      <h3>Baidu Research</h3>
+      Contact: pengli09 at gmail.com, lpeng2009 at 163.com
+    </div>
 
     <div id="publications">
       <h3>Publications</h3>
@@ -66,26 +58,29 @@
     </div>
 
     <div id="academic-activities">
-      <h3>Academic Activities</h3>
+      <h3>Professional Services</h3>
       <ul>
-        <li>EMNLP 2014: Reviewer.</li>
-        <li>ACL 2014: Reviewer.</li>
-        <li>Dec, 2013. Beijing. Talk at MSRA Ph.D Forum. [<a href="talks/pengli-tsinghua-rae-itg-mt.pdf">slides</a>]
-        <li>Oct, 2010. Wuhan. PC Chair. The 5th Youth Workshop on Computational Linguistics (YWCL 2010).</li>
+        <li>ACM TIST: Reviewer (2015)</li>
+        <li>EMNLP: Reviewer (2014)</li>
+        <li>ACL: Reviewer (2014)</li>
+        <li>The 5th Youth Workshop on Computational Linguistics (YWCL 2010): PC Chair</li>
       </ul>
     </div>
 
     <div id="education">
       <h3>Education</h3>
       <ul>
-        <li>Aug, 2005 - Jul, 2009.  B.S. in Dept. of Computer Science and Technology, Tsinghua University, Beijing.</li>
+        <li>Aug, 2009 - Jan, 2015. Ph.D in Dept. of Computer Science and Technology, Tsinghua University, Beijing</li>
+        <li>Aug, 2005 - Jul, 2009.  B.S. in Dept. of Computer Science and Technology, Tsinghua University, Beijing</li>
       </ul>
     </div>
 
 
-    <a href="http://www3.clustrmaps.com/counter/maps.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" id="clustrMapsLink"><img src="http://www3.clustrmaps.com/counter/index2.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://www2.clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://www2.clustrmaps.com';" /></a>
-    <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script>
-    <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+    <div>
+      <a href="http://www3.clustrmaps.com/counter/maps.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" id="clustrMapsLink"><img src="http://www3.clustrmaps.com/counter/index2.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://www2.clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://www2.clustrmaps.com';" /></a>
+      <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script>
+      <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+    </div>
     <div id="last-updated">
       Last-updated: Jan 6, 2015.
     </div>
