update pdf link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <li><b>Peng Li</b>, Wei Li, Zhengyan He, Xuguang Wang, Ying Cao, Jie Zhou, and Wei Xu. Dataset and Neural Recurrent Sequence Labeling Model for Open-Domain Factoid Question Answering. <a href="https://arxiv.org/abs/1607.06275" target=_blank>arXiv:1607.06275</a>.</li>
-        <li>Jie Zhou, Ying Cao, Xuguang Wang, <b>Peng Li</b>, and Wei Xu. Deep Recurrent Models with Fast-Forward Connections for Neural Machine Translation. <i>Transactions of the Association for Computational Linguistics</i>, 2016(4):371-383.</li>
+        <li>Jie Zhou, Ying Cao, Xuguang Wang, <b>Peng Li</b>, and Wei Xu. Deep Recurrent Models with Fast-Forward Connections for Neural Machine Translation. <i>Transactions of the Association for Computational Linguistics</i>, 2016(4):371-383. [<a href="http://www.aclweb.org/anthology/Q/Q16/Q16-1027.pdf" target=_blank>pdf</a>]</li>
         <li><b>Peng Li</b>, Yang Liu, Maosong Sun, Tatsuya Izuha, and Dakun Zhang. A Neural Reordering Model for Phrase-based Translation. <i>Proc. of COLING 2014, the 25th International Conference on Computational Linguistics: Technical Papers</i>, Dublin, Ireland, 2014, pp. 1897-1907. [<a href="http://www.aclweb.org/anthology/C/C14/C14-1179.pdf" target=_blank>pdf</a>] [<a href="talks/coling-2014.pdf">slides</a>]</li>
         <li><b>Peng Li</b>, Yang Liu, Maosong Sun. Recursive Autoencoders for ITG-based Translation. <i>Proc. of EMNLP 2013: Conference on Empirical Methods in Natural Language Processing</i>, Seattle, Washington, USA, 2013, pp. 567-577. [<a href="http://www.aclweb.org/anthology/D/D13/D13-1054.pdf" target=_blank>pdf</a>] [<a href="talks/pengli-tsinghua-rae-itg-mt.pdf">Talk</a> at MSRA Ph.D Forum]
         <li><b>Peng Li</b>, Yang Liu, Maosong Sun. An Extended GHKM Algorithm for Inducing Lambda-SCFG. <i>Proc. of the 27th AAAI Conference on Artificial Intelligence (AAAI-13)</i>, Bellevue, Washington, USA, 2013, pp. 605-611. [<a href="http://www.aaai.org/ocs/index.php/AAAI/AAAI13/paper/view/6189" target=_blank>pdf</a>] [<a href="publications/aaai-2013-slides.pdf" target=_blank>slides</a>]
@@ -84,7 +84,7 @@
       <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
     </div>
     <div id="last-updated">
-      Last-updated: Jul. 23, 2016.
+      Last-updated: Nov. 13, 2016.
     </div>
   </body>
 </html>
