--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h3>Baidu Research - Institute of Deep Learning</h3>
+      <h3>Tencent WeChat</h3>
       Contact: pengli09 at gmail.com
     </div>
 
@@ -37,13 +37,13 @@
       </ul>
     </div>
 
-    <div id="patents">
+    <!--div id="patents">
       <h3>Patents</h3>
       <ul>
         <li><b>Peng Li</b>, Maosong Sun, Ping Xue. <i>A Method and a Device for Bilingual Sentence Alignment</i>. Application No. 200910093061.6, Filing No. ZL200910093061.6.</li>
         <li><b>Peng Li</b>, Yang Liu, Ping Xue, Maosong Sun. <i>A Method and a Device for Bilingual Word Alignment</i>. Application No. 201310003841.3.</li>
       </ul>
-    </div>
+    </div-->
 
     <div id="software">
       <h3>Software</h3>
@@ -62,6 +62,7 @@
     <div id="academic-activities">
       <h3>Professional Services</h3>
       <ul>
+        <li>NAACL: Reviewer (2018)</li>
         <li>ACM TIST: Reviewer (2015)</li>
         <li>EMNLP: Reviewer (2014)</li>
         <li>ACL: Reviewer (2014)</li>
@@ -84,7 +85,7 @@
       <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
     </div>
     <div id="last-updated">
-      Last-updated: Nov. 14, 2017.
+      Last-updated: Jul. 19, 2018.
     </div>
   </body>
 </html>
