--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h3>Tencent WeChat</h3>
+      <h3>Pattern Recognition Center, WeChat AI, Tencent Inc</h3>
       Contact: pengli09 at gmail.com
     </div>
 
@@ -18,6 +18,12 @@
       <h3>Publications</h3>
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
+        <li>Yuan Yao, Deming Ye, <b>Peng Li</b>, Xu Han, Yankai Lin, Zhenghao Liu, Zhiyuan Liu, Lixin Huang, Jie Zhou, and Maosong Sun.  DocRED: A Large-Scale Document-Level Relation Extraction Dataset. <i>Proc. of the 57th Conference of the Association for Computational Linguistics (ACL 2019)</i>, Florence, Italy, 2019, pp. 764-777. [<a href="https://www.aclweb.org/anthology/P19-1074" target=_blank>pdf</a>] [<a href="https://github.com/thunlp/DocRED" target=_blank>code &amp; data</a>] [<a href="https://competitions.codalab.org/competitions/20147" target=_blank>CodaLab</a>] </li>
+        <li>Fuli Luo, <b>Peng Li</b>, Pengcheng Yang, Jie Zhou, Yutong Tan, Baobao Chang, Zhifang Sui, and Xu Sun. Towards Fine-grained Text Sentiment Transfer. <i>Proc. of the 57th Conference of the Association for Computational Linguistics (ACL 2019)</i>, Florence, Italy, 2019, pp. 2013-2022. [<a href="https://www.aclweb.org/anthology/P19-1194" target=_blank>pdf</a>] [<a href="https://github.com/luofuli/Fine-grained-Sentiment-Transfer" target=_blank>code</a>]</li>
+        <li>Shuming Ma, Pengcheng Yang, Tianyu Liu, <b>Peng Li</b>, Jie Zhou, and Xu Sun. Key Fact as Pivot: A Two-Stage Model for Low Resource Table-to-Text Generation. <i>Proc. of the 57th Conference of the Association for Computational Linguistics (ACL 2019)</i>, Florence, Italy, 2019, pp. 2047-2057. [<a href="https://www.aclweb.org/anthology/P19-1197" target=_blank>pdf</a>]</li>
+        <li>Fuli Luo, <b>Peng Li</b>, Jie Zhou, Pengcheng Yang, Baobao Chang, Zhifang Sui, and Xu Sun. A Dual Reinforcement Learning Framework for Unsupervised Text Style Transfer. To appear in IJCAI 2019. [<a href="https://github.com/luofuli/DualRL" target=_blank>code</a>]</li>
+        <li>Xiaozhi Wang, Xu Han, Zhiyuan Liu, Maosong Sun, and <b>Peng Li</b>. Adversarial Training for Weakly Supervised Event Detection. <i>Proc. of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)</i>, Minneapolis, Minnesota, 2019, pp. 998-1008. [<a href="https://www.aclweb.org/anthology/N19-1105">pdf</a>] [<a href="https://github.com/thunlp/Adv-ED">code</a>]</li>
+        <li>Xu Han, Pengfei Yu, Zhiyuan Liu, Maosong Sun, and <b>Peng Li</b>. Hierarchical Relation Extraction with Coarse-to-Fine Grained Attention. <i>Proc. of the 2018 Conference on Empirical Methods in Natural Language Processing (EMNLP 2018)</i>, Brussels, Belgium, 2018, pp. 2236-2245. [<a href="https://www.aclweb.org/anthology/D18-1247">pdf</a>] [<a href="https://github.com/thunlp/HNRE">code</a>]</li>
         <li><b>Peng Li</b>, Wei Li, Zhengyan He, Xuguang Wang, Ying Cao, Jie Zhou, and Wei Xu. Dataset and Neural Recurrent Sequence Labeling Model for Open-Domain Factoid Question Answering. <a href="https://arxiv.org/abs/1607.06275" target=_blank>arXiv:1607.06275</a>. [<a href="http://paddlepaddle.bj.bcebos.com/dataset/webqa/WebQA.v1.0.zip">WebQA v1.0</a>] [<a href="https://github.com/pengli09/models/archive/neural-qa-verified.zip">code</a> (in the directory "neural_qa", veryfied on Ubuntu 16.04 with <a href="https://pypi.python.org/pypi/paddlepaddle/0.10.5">PaddlePaddle 0.10.5</a>)]</li>
         <li>Jie Zhou, Ying Cao, Xuguang Wang, <b>Peng Li</b>, and Wei Xu. Deep Recurrent Models with Fast-Forward Connections for Neural Machine Translation. <i>Transactions of the Association for Computational Linguistics</i>, 2016(4):371-383. [<a href="http://www.aclweb.org/anthology/Q/Q16/Q16-1027.pdf" target=_blank>pdf</a>]</li>
         <li><b>Peng Li</b>, Yang Liu, Maosong Sun, Tatsuya Izuha, and Dakun Zhang. A Neural Reordering Model for Phrase-based Translation. <i>Proc. of COLING 2014, the 25th International Conference on Computational Linguistics: Technical Papers</i>, Dublin, Ireland, 2014, pp. 1897-1907. [<a href="http://www.aclweb.org/anthology/C/C14/C14-1179.pdf" target=_blank>pdf</a>] [<a href="talks/coling-2014.pdf">slides</a>]</li>
@@ -33,7 +39,8 @@
     <div id="tech-reports">
       <h3>Technical Reports</h3>
       <ul>
-        <li>Zhiyuan Liu, <b>Peng Li</b>, Yabin Zheng, Maosong Sun. Community Detection by Affinity Propagation. <i>Technical Reports No. 001</i>, 2008. [<a href="techreports/TR001_thunlp_community_detection.pdf" target=_blank>pdf</a>]
+        <li>Qiu Ran, <b>Peng Li</b>, Weiwei Hu, and Jie Zhou. Option Comparison Network for Multiple-choice Reading Comprehension. <i>Technical Report</i>, 2019. [<a href="https://arxiv.org/pdf/1903.03033.pdf">pdf</a>]</li>
+        <li>Zhiyuan Liu, <b>Peng Li</b>, Yabin Zheng, Maosong Sun. Community Detection by Affinity Propagation. <i>Technical Report</i>, 2008. [<a href="techreports/TR001_thunlp_community_detection.pdf" target=_blank>pdf</a>]
       </ul>
     </div>
 
@@ -85,7 +92,7 @@
       <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
     </div>
     <div id="last-updated">
-      Last-updated: Jul. 24, 2018.
+      Last-updated: Aug. 1, 2019.
     </div>
   </body>
 </html>
