--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h3>Publications</h3>
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
-        <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA.</li>
+        <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://www.aaai.org/Papers/AAAI/2020GB/AAAI-ChenD.3247.pdf">pdf</a>]</li>
 
-        <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA.</li>
+        <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://arxiv.org/abs/1912.08360">arXiv</a>]</li>
 
         <li>Qiu Ran, Yankai Lin, <b>Peng Li</b>, Jie Zhou, and Zhiyuan Liu. NumNet: Machine Reading Comprehension with Numerical Reasoning. <i>Proceedings of EMNLP 2019</i>, Hong Kong, China, pp. 2474-2484. [<a href="https://www.aclweb.org/anthology/D19-1251.pdf" target=_blank>pdf</a>] </li>
 
