--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <h3>Publications</h3>
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
+        <li>Qiu Ran*, Yankai Lin*, <b>Peng Li</b>*, Jie Zhou. Learning to Recover from Multi-Modality Errors for Non-Autoregressive Neural Machine Translation. <i>To appear in ACL 2020</i>.</li>
+
+        <li>Xu Han, Yi Dai, Tianyu Gao, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. Continual Relation Learning via Episodic Memory Activation and Reconsolidation. <i>To appear in ACL 2020</i>.</li>
+
         <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://www.aaai.org/Papers/AAAI/2020GB/AAAI-ChenD.3247.pdf">pdf</a>]</li>
 
         <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://arxiv.org/abs/1912.08360">arXiv</a>] [<a href="https://github.com/phellonchen/DMRM">code</a>]</li>
