--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <li>Xu Han, Yi Dai, Tianyu Gao, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. Continual Relation Learning via Episodic Memory Activation and Reconsolidation. <i>To appear in ACL 2020</i>.</li>
 
-        <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://www.aaai.org/Papers/AAAI/2020GB/AAAI-ChenD.3247.pdf">pdf</a>]</li>
+        <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://arxiv.org/pdf/1909.03211.pdf">pdf</a>]</li>
 
         <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://arxiv.org/abs/1912.08360">arXiv</a>] [<a href="https://github.com/phellonchen/DMRM">code</a>]</li>
 
