--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h3>Publications</h3>
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
-        <li>Qiu Ran*, Yankai Lin*, <b>Peng Li</b>*, Jie Zhou. Learning to Recover from Multi-Modality Errors for Non-Autoregressive Neural Machine Translation. <i>To appear in ACL 2020</i>.</li>
+        <li>Qiu Ran*, Yankai Lin*, <b>Peng Li</b>*, Jie Zhou. Learning to Recover from Multi-Modality Errors for Non-Autoregressive Neural Machine Translation. <i>To appear in ACL 2020</i>. [<a href="https://arxiv.org/abs/2006.05165">arXiv</a>]</li>
 
         <li>Xu Han, Yi Dai, Tianyu Gao, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. Continual Relation Learning via Episodic Memory Activation and Reconsolidation. <i>To appear in ACL 2020</i>.</li>
 
