--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
       <h3>Publications</h3>
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
+        <li>Xiuyi Chen, Fandong Meng, <b>Peng Li</b>, Feilong Chen, Shuang Xu, Bo Xu, Jie Zhou. Bridging the Gap between Prior and Posterior Knowledge Selection for Knowledge-Grounded Dialogue Generation. <i>Proceedings of EMNLP 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.275.pdf">pdf</a>]</li>
+        <li>Hao Peng, Tianyu Gao, Xu Han, Yankai Lin, <b>Peng Li</b>, Zhiyuan Liu, Maosong Sun, Jie Zhou. Learning from Context or Names? An Empirical Study on Neural Relation Extraction. <i>Proceedings of EMNLP 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.298.pdf">pdf</a>]</li>
+        <li>Deming Ye, Yankai Lin, Jiaju Du, Zhenghao Liu, <b>Peng Li</b>, Maosong Sun, Zhiyuan Liu. Coreferential Reasoning Learning for Language Representation. <i>Proceedings of EMNLP 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.582.pdf">pdf</a>]</li>
+        <li>Xiaoyu Kou, Yankai Lin, Shaobo Liu, <b>Peng Li</b>, Jie Zhou, Yan Zhang. Disentangle-based Continual Graph Representation Learning. <i>Proceedings of EMNLP 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.237.pdf">pdf</a>]</li>
+        <li>Xiaozhi Wang, Ziqi Wang, Xu Han, Wangyi Jiang, Rong Han, Zhiyuan Liu, Juanzi Li, <b>Peng Li</b>, Yankai Lin, Jie Zhou. MAVEN: A Massive General Domain Event Detection Dataset. <i>Proceedings of EMNLP 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.129.pdf">pdf</a>]</li>
         <li>Qiu Ran*, Yankai Lin*, <b>Peng Li</b>*, Jie Zhou. Learning to Recover from Multi-Modality Errors for Non-Autoregressive Neural Machine Translation. <i>Proceedings of ACL 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.acl-main.277.pdf">pdf</a>]</li>
 
         <li>Xu Han, Yi Dai, Tianyu Gao, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. Continual Relation Learning via Episodic Memory Activation and Reconsolidation. <i>Proceedings of ACL 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.acl-main.573.pdf">pdf</a>]</li>
 
         <li>Deli Chen, Yankai Lin, Wei Li, <b>Peng Li</b>, Jie Zhou, Xu Sun. Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://arxiv.org/pdf/1909.03211.pdf">pdf</a>]</li>
 
-        <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog">pdf</a>] [<a href="https://github.com/phellonchen/DMRM">code</a>]</li>
+        <li>Feilong Chen, Fandong Meng, Jiaming Xu, <b>Peng Li</b>, Bo Xu, Jie Zhou. DMRM: A Dual-channel Multi-hop Reasoning Model for Visual Dialog. <i>Proceedings of AAAI 2020</i>, New York, USA. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/6248/6104">pdf</a>] [<a href="https://github.com/phellonchen/DMRM">code</a>]</li>
+
+        <li> Xiaozhi Wang, Shengyu Jia, Xu Han, Zhiyuan Liu, Juanzi Li, <b>Peng Li</b>, Jie Zhou. Neural Gibbs Sampling for Joint Event Argument Extraction. <i>Proceedings of AACL 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.aacl-main.21.pdf">pdf</a>]</li>
+      
+        <li>Xu Han, Tianyu Gao, Yankai Lin, Hao Peng, Yaoliang Yang, Chaojun Xiao, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou, Maosong Sun. More Data, More Relations, More Context and More Openness: A Review and Outlook for Relation Extraction. <i>Proceedings of AACL 2020</i>. [<a href="https://www.aclweb.org/anthology/2020.aacl-main.75.pdf">pdf</a>]</li>
 
         <li>Qiu Ran, Yankai Lin, <b>Peng Li</b>, Jie Zhou, and Zhiyuan Liu. NumNet: Machine Reading Comprehension with Numerical Reasoning. <i>Proceedings of EMNLP 2019</i>, Hong Kong, China, pp. 2474-2484. [<a href="https://www.aclweb.org/anthology/D19-1251.pdf">pdf</a>] [<a href="https://github.com/ranqiu92/NumNet">code</a>]</li>
 
