--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h3>Pattern Recognition Center, WeChat AI, Tencent Inc.</h3>
+      <h3>Pattern Recognition Center, WeChat AI, Tencent Inc., China</h3>
       Contact: pengli09 at gmail.com
     </div>
 
