--- a/index.html
+++ b/index.html
@@ -2,7 +2,70 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Peng Li's Homepage</title>
-    <link rel="stylesheet" type="text/css" href="lpeng.css">
+    <style type="text/css">
+      body {
+        color: #000000;
+        background-color: #FFFFFF;
+        margin: auto;
+        width: 1024px;
+        text-align: center; /* for IE */
+      }
+
+      div {
+        clear: left;
+        width: 1024px;
+        text-align: justify;
+      }
+
+      img#id-photo {
+        border: 0;
+        float: left;
+        margin: 0px 20px 20px 0px;
+        height: 200;
+        clear: right;
+      }
+
+      #google-scholar {
+        margin-left: 1em;    
+      }
+
+      ul {
+        margin-left: 1em;
+        padding-left: 1em;
+      }
+
+      ul li{
+        padding-bottom: 5px;
+      }
+
+      a:link,a:visited,a:active {
+        text-decoration: none;
+        border-bottom: 1px dotted;
+        color: #5B2C6F;
+      }
+
+      div#info {
+        margin-bottom: 2em;
+      }
+
+      h3 {
+        margin-bottom: 0em;
+      }
+
+      div#last-updated {
+        clear: left;
+      }
+
+      span#title {
+        color: #3462DB;
+      }
+
+      strong {
+        font-size: 1.1em;
+        margin: 0.5em 0px 0.5em -1.2em;
+      }
+
+    </style>
   </head>
   <body>
     <div id="photo">
