--- a/index.html
+++ b/index.html
@@ -83,7 +83,15 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2021</strong></h3>
-          <li>Jifan Yu, Yuquan Wang, Qingyang Zhong, Gan Luo, Yiming Mao, Kai Sun, Wenzheng Feng, Wei Xu, Shulin Cao, Kaisheng Zeng, Zijun Yao, Lei Hou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Bin Xu, Juanzi Li, Jie Tang, and Maosong Sun. 2021. <span id="title">MOOCCubeX: A Large Knowledge-centered Repository for Adaptive Learning in MOOCs</span>. In <i>Proceedings of CIKM 2021</i>.
+          <li>Lei Li, Yankai Lin, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou, and Xu Sun. Dynamic Knowledge Distillation for Pre-trained Language Models. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+
+          <li>Wenkai Yang, Yankai Lin, <b>Peng Li</b>, Jie Zhou, and Xu Sun. RAP: Robustness-Aware Perturbations for Defending against Backdoor Attacks on NLP Models. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+
+          <li>Yuan Yao, Jiaju Du, Yankai Lin, <b>Peng Li</b>, Zhiyuan Liu, Jie Zhou, and Maosong Sun. CodRED: A Cross-Document Relation Extraction Dataset for Acquiring Knowledge in the Wild. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+
+          <li>Lei Li, Yankai Lin, Deli Chen, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou and Xu Sun. CascadeBERT: Accelerating Inference of Pre-trained Language Models via Calibrated Complete Models Cascade. To appear in <i>Findings of EMNLP 2021</i>.</li>
+
+          <li>Jifan Yu, Yuquan Wang, Qingyang Zhong, Gan Luo, Yiming Mao, Kai Sun, Wenzheng Feng, Wei Xu, Shulin Cao, Kaisheng Zeng, Zijun Yao, Lei Hou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Bin Xu, Juanzi Li, Jie Tang, and Maosong Sun. 2021. <span id="title">MOOCCubeX: A Large Knowledge-centered Repository for Adaptive Learning in MOOCs</span>. To appear in <i>Proceedings of CIKM 2021</i>.
 
           <li>Yusheng Su, Xu Han, Zhengyan Zhang, <b>Peng Li</b>, Zhiyuan Liu, Yankai Lin, Jie Zhou, and Maosong Sun. 2021. <span id="title">CokeBERT: Contextual Knowledge Selection and Embedding towards Enhanced Pre-Trained Language Models</span>. <i>AI Open</i>, 2021(2):127-134. [<a href="https://doi.org/10.1016/j.aiopen.2021.06.004">pdf</a>] [<a href="https://github.com/thunlp/CokeBERT">code</a>]</li>
 
