--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
           <li>Yingxue Zhang, Fandong Meng, <b>Peng Li</b>, Ping Jian, and Jie Zhou. 2021. <span id="title">Context Tracking Network: Graph-based Context Modeling for Implicit Discourse Relation Recognition</span>. In <i>Proceedings of NAACL (short) 2021</i>, 1592–1599. [<a href="https://www.aclweb.org/anthology/2021.naacl-main.126.pdf">pdf</a>]</li>
 
+          <li>Yusheng Su, Xu Han, Yankai Lin, Zhengyan Zhang, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou, and Maosong Sun. 2020. <span id="title">CSS-LM: A Contrastive Framework for Semi-supervised Fine-tuning of Pre-trained Language Models</span>. To appear in <i>TASLP</i>. [<a href="https://arxiv.org/abs/2102.03752">arXiv</a>]</li>
+
           <li>Xianfeng Zeng, Yijin Liu, Ernan Li, Qiu Ran, Fandong Meng, <b>Peng Li</b>, Jinan Xu, and Jie Zhou. 2021. <span id="title">WeChat Neural Machine Translation Systems for WMT21</span>. [<a href="https://arxiv.org/abs/2108.02401">arXiv</a>]</li>
 
           <li>Yingxue Zhang, Fandong Meng, Peng Li, Ping Jian, and Jie Zhou. 2021. <span id="title">MS-Ranker: Accumulating Evidence from Potentially Correct Candidates via Reinforcement Learning for Answer Selection</span>. <i>Neurocomputing</i>, 2021(449):270-279. [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231221004690">pdf</a>]</li>
 
           <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, and Jie Zhou. 2020. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. [<a href="https://arxiv.org/abs/2105.13880">arXiv</a>]</li>
-
-          <li>Yusheng Su, Xu Han, Yankai Lin, Zhengyan Zhang, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou, and Maosong Sun. 2020. <span id="title">CSS-LM: A Contrastive Framework for Semi-supervised Fine-tuning of Pre-trained Language Models</span>. [<a href="https://arxiv.org/abs/2102.03752">arXiv</a>]</li>
 
 
         <h3><strong>2020</strong></h3>
