--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2021</strong></h3>
-          <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. Topology-Imbalance Learning for Semi-Supervised Node Classification. To appear in <i>Proceedings of NeurIPS 2021</i>.</li>
+          <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>]</li>
 
-          <li>Lei Li, Yankai Lin, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou, and Xu Sun. Dynamic Knowledge Distillation for Pre-trained Language Models. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+          <li>Lei Li, Yankai Lin, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou, and Xu Sun. <span id="title">Dynamic Knowledge Distillation for Pre-trained Language Models</span>. In <i>Proceedings of EMNLP 2021</i>, 379-389. [<a href="https://aclanthology.org/2021.emnlp-main.31.pdf">pdf</a>]</li>
 
-          <li>Wenkai Yang, Yankai Lin, <b>Peng Li</b>, Jie Zhou, and Xu Sun. RAP: Robustness-Aware Perturbations for Defending against Backdoor Attacks on NLP Models. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+          <li>Wenkai Yang, Yankai Lin, <b>Peng Li</b>, Jie Zhou, and Xu Sun. <span id="title">RAP: Robustness-Aware Perturbations for Defending against Backdoor Attacks on NLP Models</span>. In <i>Proceedings of EMNLP 2021</i>, 8365-8381. [<a href="https://aclanthology.org/2021.emnlp-main.659.pdf">pdf</a>]</li>
 
-          <li>Yuan Yao, Jiaju Du, Yankai Lin, <b>Peng Li</b>, Zhiyuan Liu, Jie Zhou, and Maosong Sun. CodRED: A Cross-Document Relation Extraction Dataset for Acquiring Knowledge in the Wild. To appear in <i>Proceedings of EMNLP 2021</i>.</li>
+          <li>Yuan Yao, Jiaju Du, Yankai Lin, <b>Peng Li</b>, Zhiyuan Liu, Jie Zhou, and Maosong Sun. <span id="title">CodRED: A Cross-Document Relation Extraction Dataset for Acquiring Knowledge in the Wild</span>. In <i>Proceedings of EMNLP 2021</i>, 4452-4472. [<a href="https://aclanthology.org/2021.emnlp-main.366.pdf">pdf</a>]</li>
 
-          <li>Lei Li, Yankai Lin, Deli Chen, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou and Xu Sun. CascadeBERT: Accelerating Inference of Pre-trained Language Models via Calibrated Complete Models Cascade. To appear in <i>Findings of EMNLP 2021</i>.</li>
+          <li>Lei Li, Yankai Lin, Deli Chen, Shuhuai Ren, <b>Peng Li</b>, Jie Zhou and Xu Sun. <span id="title">CascadeBERT: Accelerating Inference of Pre-trained Language Models via Calibrated Complete Models Cascade</span>. In <i>Findings of EMNLP 2021</i>, 475-486. [<a href="https://aclanthology.org/2021.findings-emnlp.43.pdf">pdf</a>]</li>
 
-          <li>Jifan Yu, Yuquan Wang, Qingyang Zhong, Gan Luo, Yiming Mao, Kai Sun, Wenzheng Feng, Wei Xu, Shulin Cao, Kaisheng Zeng, Zijun Yao, Lei Hou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Bin Xu, Juanzi Li, Jie Tang, and Maosong Sun. 2021. <span id="title">MOOCCubeX: A Large Knowledge-centered Repository for Adaptive Learning in MOOCs</span>. To appear in <i>Proceedings of CIKM 2021</i>.
+          <li>Jifan Yu, Yuquan Wang, Qingyang Zhong, Gan Luo, Yiming Mao, Kai Sun, Wenzheng Feng, Wei Xu, Shulin Cao, Kaisheng Zeng, Zijun Yao, Lei Hou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Bin Xu, Juanzi Li, Jie Tang, and Maosong Sun. 2021. <span id="title">MOOCCubeX: A Large Knowledge-centered Repository for Adaptive Learning in MOOCs</span>. In <i>Proceedings of CIKM 2021</i>, 4643-4652. [<a href="https://dl.acm.org/doi/pdf/10.1145/3459637.3482010">pdf</a>]</li>
 
           <li>Yusheng Su, Xu Han, Zhengyan Zhang, <b>Peng Li</b>, Zhiyuan Liu, Yankai Lin, Jie Zhou, and Maosong Sun. 2021. <span id="title">CokeBERT: Contextual Knowledge Selection and Embedding towards Enhanced Pre-Trained Language Models</span>. <i>AI Open</i>, 2021(2):127-134. [<a href="https://doi.org/10.1016/j.aiopen.2021.06.004">pdf</a>] [<a href="https://github.com/thunlp/CokeBERT">code</a>]</li>
 
