--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
           <li>Yusheng Su, Xu Han, Yankai Lin, Zhengyan Zhang, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou, and Maosong Sun. 2020. <span id="title">CSS-LM: A Contrastive Framework for Semi-supervised Fine-tuning of Pre-trained Language Models</span>. <i>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</i>, 2021(29):2930-2941. [<a href="https://ieeexplore.ieee.org/document/9535242?source=authoralert">pdf</a>]</li>
 
-          <li>Xianfeng Zeng, Yijin Liu, Ernan Li, Qiu Ran, Fandong Meng, <b>Peng Li</b>, Jinan Xu, and Jie Zhou. 2021. <span id="title">WeChat Neural Machine Translation Systems for WMT21</span>. [<a href="https://arxiv.org/abs/2108.02401">arXiv</a>]</li>
+          <li>Xianfeng Zeng, Yijin Liu, Ernan Li, Qiu Ran, Fandong Meng, <b>Peng Li</b>, Jinan Xu, and Jie Zhou. 2021. <span id="title">WeChat Neural Machine Translation Systems for WMT21</span>. [<a href="https://aclanthology.org/2021.wmt-1.23.pdf">pdf</a>]</li>
 
           <li>Yingxue Zhang, Fandong Meng, Peng Li, Ping Jian, and Jie Zhou. 2021. <span id="title">MS-Ranker: Accumulating Evidence from Potentially Correct Candidates via Reinforcement Learning for Answer Selection</span>. <i>Neurocomputing</i>, 2021(449):270-279. [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231221004690">pdf</a>]</li>
 
@@ -225,6 +225,10 @@
       <a href="http://www3.clustrmaps.com/counter/maps.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" id="clustrMapsLink"><img src="http://www3.clustrmaps.com/counter/index2.php?url=http://nlp.csai.tsinghua.edu.cn/~lpeng" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://www2.clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://www2.clustrmaps.com';" /></a>
       <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script>
       <script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-10048593-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+    </div>
+
+    <div id="last-updated">
+      Last-updated: Jan 14, 2022.
     </div>
   </body>
 </html>
