--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h3>Pattern Recognition Center, WeChat AI, Tencent Inc., China</h3>
+      <h3><a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a>, <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China</h3>
       Contact: pengli09 at gmail.com
     </div>
 
@@ -228,7 +228,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jan 14, 2022.
+      Last-updated: Feb 19, 2022.
     </div>
   </body>
 </html>
