--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
       
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
+        <h3><strong>2022</strong></h3>
+          <li>Weize Chen, Xu Han, Yankai Lin, Hexu Zhao, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">Fully Hyperbolic Neural Networks</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
+          <li>Yikang Shen, Shawn Tan, Alessandro Sordoni, <b>Peng Li</b>, Jie Zhou, Aaron Courville. <span id="title">Unsupervised Dependency Graph Network</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
+          <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun. <span id="title">Packed Levitated Marker for Entity and Relation Extraction</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
+          <li>Pei Ke, Hao Zhou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Xiaoyan Zhu, Minlie Huang. <span id="title">CTRLEval: An Unsupervised Reference-Free Metric for Evaluating Controlled Text Generation</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
+          <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun, Zhiyuan Liu. <span id="title">A Simple but Effective Pluggable Entity Lookup Table for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2022</i>. (short)</li>
+          <li>Yujia Qin, Jiajie Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">ELLE: Efficient Lifelong Pre-training for Emerging Data</span>. To appear in <i>Findings of ACL 2022</i>.</li>
+          <li>Xin Lv, Yankai Lin, Yixin Cao, Lei Hou, Juanzi Li, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou. <span id="title">Do Pre-trained Models Benefit Knowledge Graph Completion? A Reliable Evaluation and a Reasonable Approach</span>. To appear in <i>Findings of ACL 2022</i>.</li>
+          <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">MoEfication: Conditional Computation of Transformer Models for Efficient Inference</span>. To appear in <i>Findings of ACL 2022</i>.</li>
+          <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Zhiyuan Liu, Juanzi Li, Lei Hou, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">Exploring Low-dimensional Intrinsic Task Subspace via Prompt Tuning</span>. To appear in <i>Findings of ACL 2022</i>.</li>
+
         <h3><strong>2021</strong></h3>
           <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>]</li>
 
