--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li>Yikang Shen, Shawn Tan, Alessandro Sordoni, <b>Peng Li</b>, Jie Zhou, Aaron Courville. <span id="title">Unsupervised Dependency Graph Network</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
           <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun. <span id="title">Packed Levitated Marker for Entity and Relation Extraction</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
           <li>Pei Ke, Hao Zhou, Yankai Lin, <b>Peng Li</b>, Jie Zhou, Xiaoyan Zhu, Minlie Huang. <span id="title">CTRLEval: An Unsupervised Reference-Free Metric for Evaluating Controlled Text Generation</span>. To appear in <i>Proceedings of ACL 2022</i>.</li>
-          <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun, Zhiyuan Liu. <span id="title">A Simple but Effective Pluggable Entity Lookup Table for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2022</i>. (short)</li>
+          <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun, Zhiyuan Liu. <span id="title">A Simple but Effective Pluggable Entity Lookup Table for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2022 (short)</i>.</li>
           <li>Yujia Qin, Jiajie Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">ELLE: Efficient Lifelong Pre-training for Emerging Data</span>. To appear in <i>Findings of ACL 2022</i>.</li>
           <li>Xin Lv, Yankai Lin, Yixin Cao, Lei Hou, Juanzi Li, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou. <span id="title">Do Pre-trained Models Benefit Knowledge Graph Completion? A Reliable Evaluation and a Reasonable Approach</span>. To appear in <i>Findings of ACL 2022</i>.</li>
           <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">MoEfication: Conditional Computation of Transformer Models for Efficient Inference</span>. To appear in <i>Findings of ACL 2022</i>.</li>
@@ -126,7 +126,7 @@
 
           <li>Qiu Ran, Yankai Lin, <b>Peng Li</b>, and Jie Zhou. 2021. <span id="title">Guiding Non-Autoregressive Neural Machine Translation Decoding with Reordering Information</span>.  In <i>Proceedings of AAAI 2021</i>, 13727-13735. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17618/17425">pdf</a>]</li>
 
-          <li>Yingxue Zhang, Fandong Meng, <b>Peng Li</b>, Ping Jian, and Jie Zhou. 2021. <span id="title">Context Tracking Network: Graph-based Context Modeling for Implicit Discourse Relation Recognition</span>. In <i>Proceedings of NAACL (short) 2021</i>, 1592–1599. [<a href="https://www.aclweb.org/anthology/2021.naacl-main.126.pdf">pdf</a>]</li>
+          <li>Yingxue Zhang, Fandong Meng, <b>Peng Li</b>, Ping Jian, and Jie Zhou. 2021. <span id="title">Context Tracking Network: Graph-based Context Modeling for Implicit Discourse Relation Recognition</span>. In <i>Proceedings of NAACL 2021 (short)</i>, 1592–1599. [<a href="https://www.aclweb.org/anthology/2021.naacl-main.126.pdf">pdf</a>]</li>
 
           <li>Yusheng Su, Xu Han, Yankai Lin, Zhengyan Zhang, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou, and Maosong Sun. 2020. <span id="title">CSS-LM: A Contrastive Framework for Semi-supervised Fine-tuning of Pre-trained Language Models</span>. <i>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</i>, 2021(29):2930-2941. [<a href="https://ieeexplore.ieee.org/document/9535242?source=authoralert">pdf</a>]</li>
 
