--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h3><a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a>, <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China</h3>
-      Contact: pengli09 at gmail.com
+      <h3>Research Associate Professor<br/>
+        <a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a><br/>
+        <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a></h3>
+      pengli09 [.] gmail.com
     </div>
 
     <div id="publications">
