--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         border: 0;
         float: left;
         margin: 0px 20px 20px 0px;
-        height: 200;
+        height: 260;
         clear: right;
       }
 
@@ -69,14 +69,13 @@
   </head>
   <body>
     <div id="photo">
-      <img id="id-photo" src="images/lipeng-seattle.jpg" alt="Peng Li's photo">
+      <img id="id-photo" src="images/pic.jpeg" alt="Peng Li's photo">
     </div>
     <div id="info">
       <h1>Peng Li</h1>
       <h4>Research Associate Professor<br/>
-        <a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a><br/>
-        <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a></h4>
-      pengli09 [.] gmail.com
+        <a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a>, <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China</br>
+        Contact: pengli09 at gmail.com</h4>
     </div>
 
     <div id="publications">
