--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         margin-bottom: 0em;
       }
 
+      h4 {
+        margin-bottom: 0em;
+      }
+
       div#last-updated {
         clear: left;
       }
@@ -73,9 +77,14 @@
     </div>
     <div id="info">
       <h1>Peng Li</h1>
-      <h4>Research Associate Professor<br/>
-        <a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a>, <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China</br>
-        Contact: pengli09 at gmail.com</h4>
+      <h4>Research Associate Professor</h4>
+      <a href="https://air.tsinghua.edu.cn/">Institute for AI Industry Research (AIR)</a>, <a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China</br>
+      Contact: pengli09 at gmail.com
+    </div>
+
+    <div id="bio">
+      <h2>Bio</h2>
+      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning, Baidu Inc. His main research interests include natural language processing, pre-trained models, question answering, information extraction, machine translation, and dialogue system. He was the recipient of First Prize of Qian Weichang Chinese Information Processing Science and Technology Award and Second Prize of Chinese Institute of Electronics Science and Technology Progress Award.
     </div>
 
     <div id="publications">
@@ -239,7 +248,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 19, 2022.
+      Last-updated: Mar 18, 2022.
     </div>
   </body>
 </html>
