--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun, Zhiyuan Liu. <span id="title">A Simple but Effective Pluggable Entity Lookup Table for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2022 (short)</i>.</li>
           <li>Yujia Qin, Jiajie Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">ELLE: Efficient Lifelong Pre-training for Emerging Data</span>. To appear in <i>Findings of ACL 2022</i>.</li>
           <li>Xin Lv, Yankai Lin, Yixin Cao, Lei Hou, Juanzi Li, Zhiyuan Liu, <b>Peng Li</b>, Jie Zhou. <span id="title">Do Pre-trained Models Benefit Knowledge Graph Completion? A Reliable Evaluation and a Reasonable Approach</span>. To appear in <i>Findings of ACL 2022</i>.</li>
-          <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">MoEfication: Conditional Computation of Transformer Models for Efficient Inference</span>. To appear in <i>Findings of ACL 2022</i>.</li>
+          <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">MoEﬁcation: Transformer Feed-forward Layers are Mixtures of Experts</span>. To appear in <i>Findings of ACL 2022</i>.</li>
 
         <h3><strong>2021</strong></h3>
           <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>]</li>
@@ -248,7 +248,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Mar 18, 2022.
+      Last-updated: Mar 19, 2022.
     </div>
   </body>
 </html>
