--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2022</strong></h3>
+          <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. To appear in <i>Proceedings of IJCAI-22</i>. [<a href="https://arxiv.org/abs/2012.07437">arXiv</a>]</li>
+          <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. To appear in <i>Proceedings of NAACL 2022</i>.</li>
+          <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. To appear in <i>Proceedings of NAACL 2022</i>.</li>
           <li>Weize Chen, Xu Han, Yankai Lin, Hexu Zhao, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. <span id="title">Fully Hyperbolic Neural Networks</span>. In <i>Proceedings of ACL 2022</i>, 5672-5686. [<a href="https://aclanthology.org/2022.acl-long.389.pdf">pdf</a>]</li>
           <li>Yikang Shen, Shawn Tan, Alessandro Sordoni, <b>Peng Li</b>, Jie Zhou, Aaron Courville. <span id="title">Unsupervised Dependency Graph Network</span>. In <i>Proceedings of ACL 2022</i>, 4767-4784.  [<a href="https://aclanthology.org/2022.acl-long.327.pdf">pdf</a>]</li>
           <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun. <span id="title">Packed Levitated Marker for Entity and Relation Extraction</span>. In <i>Proceedings of ACL 2022</i>, 4904-4917. [<a href="https://aclanthology.org/2022.acl-long.337.pdf">pdf</a>]</li>
