--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           <li>Huimin Chen, Yankai Lin, Fanchao Qi, Jinyi Hu, Peng Li, Jie Zhou, and Maosong Sun. 2021. <span id="title">Aspect-Level Sentiment-Controllable Review Generation with Mutual Learning Framework</span>. In <i>Proceedings of AAAI 2021</i>, 12639-12647. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17497/17304">pdf</a>]</li>
 
-          <li>Qiu Ran, Yankai Lin, <b>Peng Li</b>, and Jie Zhou. 2021. <span id="title">Guiding Non-Autoregressive Neural Machine Translation Decoding with Reordering Information</span>.  In <i>Proceedings of AAAI 2021</i>, 13727-13735. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17618/17425">pdf</a>]</li>
+          <li>Qiu Ran*, Yankai Lin*, <b>Peng Li</b>*, and Jie Zhou. 2021. <span id="title">Guiding Non-Autoregressive Neural Machine Translation Decoding with Reordering Information</span>.  In <i>Proceedings of AAAI 2021</i>, 13727-13735. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17618/17425">pdf</a>]</li>
 
           <li>Yingxue Zhang, Fandong Meng, <b>Peng Li</b>, Ping Jian, and Jie Zhou. 2021. <span id="title">Context Tracking Network: Graph-based Context Modeling for Implicit Discourse Relation Recognition</span>. In <i>Proceedings of NAACL 2021 (short)</i>, 1592–1599. [<a href="https://www.aclweb.org/anthology/2021.naacl-main.126.pdf">pdf</a>]</li>
 
