--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <ol>
         <h3><strong>2022</strong></h3>
            <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. To appear in <i>Proceedings of IJCAI-22</i>. [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
-          <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. To appear in <i>Proceedings of NAACL 2022</i>. [<a href="https://arXiv.org/abs/2105.13880">arXiv</a>]</li>
-          <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. 2022. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. To appear in <i>Proceedings of NAACL 2022</i>. [<a href="https://arXiv.org/abs/2111.06719">arXiv</a>]</li>
+          <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. In <i>Proceedings of NAACL 2022</i>, 3921-3937. [<a href="https://aclanthology.org/2022.naacl-main.288.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.13880">arXiv</a>]</li>
+          <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. 2022. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. In <i>Proceedings of NAACL 2022</i>, 3949-3969. [<a href="https://aclanthology.org/2022.naacl-main.290.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2111.06719">arXiv</a>]</li>
           <li>Weize Chen, Xu Han, Yankai Lin, Hexu Zhao, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Fully Hyperbolic Neural Networks</span>. In <i>Proceedings of ACL 2022</i>, 5672-5686. [<a href="https://aclanthology.org/2022.acl-long.389.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.14686">arXiv</a>]</li>
           <li>Yikang Shen, Shawn Tan, Alessandro Sordoni, <b>Peng Li</b>, Jie Zhou, Aaron Courville. 2022. <span id="title">Unsupervised Dependency Graph Network</span>. In <i>Proceedings of ACL 2022</i>, 4767-4784. [<a href="https://aclanthology.org/2022.acl-long.327.pdf">pdf</a>]</li>
           <li>Deming Ye, Yankai Lin, <b>Peng Li</b>, Maosong Sun. 2022. <span id="title">Packed Levitated Marker for Entity and Relation Extraction</span>. In <i>Proceedings of ACL 2022</i>, 4904-4917. [<a href="https://aclanthology.org/2022.acl-long.337.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2109.06067">arXiv</a>]</li>
@@ -193,7 +193,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 29, 2022.
+      Last-updated: Jul 11, 2022.
     </div>
   </body>
 </html>
