--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <li>Zhiyuan Liu, <b>Peng Li</b>, Yabin Zheng, Maosong Sun. 2008. <span id="title">Community Detection by Affinity Propagation</span>. <i>Technical Report</i>. [<a href="techreports/TR001_thunlp_community_detection.pdf">pdf</a>]</li>
       </ol>
     </div>
-    <div id="software">
+    <!--div id="software">
       <h2>Software</h2>
       <ol>
         <li><a href="https://github.com/pengli09/str2vec">str2vec</a> is a toolkit for computing vector-space representations for variable-length phrases using recursive autoencoders (RAE). In this document, we demostrate</li>
@@ -175,7 +175,7 @@
 
         <li><a href="https://github.com/pengli09/hiero-decoder-py">hiero-decoder-py</a> is a hierarchical phrase-based translation decoder which supports parallel decoding. New feature functions can also be implemented easily.</li>
       </ol>
-    </div>
+    </div--!>
 
     <div id="education">
       <h2>Education</h2>
